--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,8 +1,14 @@
 // Dimensions
 // -----------------------------------------------------------------------------
-// $menu-w:   				230px;
+$menu-h:   				115px;
+$menu-h-s:				65px;
+$menu-h-m:   			65px;
+$menu-h-m-s:   		50px;
 
 // Colors
 // -----------------------------------------------------------------------------
-// $grey666: 				#666;
-
+$green: 				#9fd533;
+$greenh:				#afeb38;
+$blue: 					#333440;
+$bgblue:				#080f30;
+$navhvr:				#9fd533;
